# llama-bench

./: .gitignore  AGENTS.md  Gemma4-26B-A4B-KLD.csv  LICENSE  Qwen3.6-35B-A3B-KLD.csv  README.md  benchy-corpus.txt  cleanup_model_cache.py  download_models.py  fit-bench-results-r20.csv  fit-bench-results-r5.csv  fit-bench-results.csv  fit_bench.py  generate_models_ini.py  gguf_utils.py  hf_gguf.py  kld-results.csv  kld_extract.py  model-capabilities.toml  models.toml  plot_kld.py  plot_metrics.py  pyproject.toml  quant_order.py  results.py  sampler_config.py  scan-cache.json  scan-cache.json.bak  scan_cache.py  select_configs.py
.opencode/: opencode.json
llama_bench/: alternative_filter.py  capabilities.py  consolidation.py  gguf_cache.py  gguf_utils.py  hf_gguf.py  kld_domain.py  labels.py  model_identity.py  quality.py  quant_order.py  results.py  sampler_config.py  scan_cache.py  schema_types.py  selection.py
tests/: test_capabilities.py  test_cleanup_model_cache.py  test_download_models.py  test_fit_bench_helpers.py  test_generate_models_ini.py  test_gguf_cache.py  test_gguf_utils.py  test_hf_gguf.py  test_kld_domain.py  test_model_identity.py  test_plot_kld.py  test_plot_metrics.py  test_results.py  test_scan_cache.py  test_select_configs.py  test_selection.py  test_selection_report_snapshots.py
