[project]
name = "llama-bench"
version = "0.1.0"
description = "Benchmark llama.cpp GGUF models to find optimal context sizes"
requires-python = ">=3.11"
dependencies = [
    "gguf>=0.18",
    "huggingface-hub>=0.20",
    "matplotlib>=3.10.8",
    "pyside6>=6.6",
]

[tool.ruff]
line-length = 99

[tool.basedpyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "pytest>=8.4.2",
    "ruff>=0.15.11",
]
